Fixed the spacing of the header for the diff page sizes

--- a/style.css
+++ b/style.css
@@ -25,19 +25,23 @@ body {
 .header {
 	display: inline-block;
 	max-width: 100%;
-	margin-top: -5rem;
 }
 .row {
 	width: 100%;
+	margin:0;
 }
 .header-title {
 	text-align: right;
-	padding: 30px;
-	width: 80%;
+	padding-right: 1rem;
+	width: 100%;
 }
 .header-text {
 	text-align: left;
-	padding-top: 25%;
+	width:100%;
+	padding-left: 7rem; 
+}
+.header-button{
+	padding-left: 7rem;
 }
 .show {
 	display: block;
@@ -60,8 +64,10 @@ body {
 	margin-top: -25rem
 }
 .header-image {
-	width: 80%;
+	width: 60%;
 	height: 40rem;
+	margin: 5rem auto 0 auto;
+
 }
 .button-border {
 	z-index: 1;
@@ -69,12 +75,12 @@ body {
 	display: flex;
 	justify-content: center;
 	position: absolute;
-	width: 10rem;
-	height: 10rem;
+	width: 9rem;
+	height: 9rem;
 	padding: 3rem auto 0 auto;
 	border-radius: 50%;
-	margin-left: -40rem;
-	margin-top: 4rem;
+	margin-left: -25rem;
+	margin-top: 6rem;
 }
 .play {
 	display: flex;
@@ -82,8 +88,9 @@ body {
 	border: solid;
 	height: 5rem;
 	width: 5rem;
-	margin-top: 2.5rem;
-	padding:0 !important;
+	margin-top: 2rem;
+	margin-left: 2rem;
+	padding: 0 !important;
 	border-width: 2.5rem 0rem 2.5rem 5rem;
 	border-color: transparent transparent transparent #202020;
 }
@@ -249,6 +256,7 @@ li {
 	justify-content: space-between;
 	position: relative;
 	width: 100%;
+	height: 6rem;
 	padding: 1rem 2rem;
 }
 .c-nav .ul li:not(:first-of-type){
@@ -315,7 +323,7 @@ option{
 		top: 0;
 		right: 0;
 		bottom: 0;
-		height: 100vh;
+		height: 50vh;
 		width: 30vh;	
 		flex-direction: column;	
 		background-color: #1D3B53;
@@ -337,4 +345,39 @@ option{
 		text-align: left;
 		padding-left: 2rem;		
 	}
+	.row{
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		width:114%;
+	}
+	.section-head{
+		height: 70rem;
+	}
+	.button-border{
+		margin-top: 8rem;
+		margin-left: -20rem;
+	}
+	.header-title{
+		padding: 0;
+		width: 100%;
+		text-align: center;
+	}
+	.header-text{
+		padding: 0;
+		width: 100%;
+	}
+	.col-parent{
+		padding: 0;
+		margin: 0 auto;
+	}
+	.col-sm-5{
+		margin: 0 auto;
+	}
+	.col-sm-6{
+		margin: 0 auto;
+	}
+	.col-sm-7{
+		margin: 0 auto;
+	}	
 }
